fix(viewers.css): Make scroll area start below header.
This prevents overlap of the header content with the scrolling content (e.g. long route lists or
long schedules).

--- a/example.css
+++ b/example.css
@@ -30,10 +30,14 @@
   padding: 0px 15px;
 }
 
+/* Necessary for defining the height in the main panel nested elements. */
+.main-row main {
+  height: 100%;
+}
+
 .sidebar {
   height: 100%;
   padding: 10px;
-  overflow-y: scroll;
   box-shadow: 3px 0px 12px #00000052;
   z-index: 1000;
 }
